--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,49 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.bovinegenius</groupId>
   <artifactId>kurgan</artifactId>
-  <name>kurgan</name>
   <version>0.1.0</version>
   <packaging>jar</packaging>
+
+  <name>kurgan</name>
+  <description>Kurgan is a Java library for loading YAML configuration files.</description>
+  <url>https://github.com/wtetzner/kurgan</url>
+
+  <licenses>
+    <license>
+      <name>BSD 3-Clause License</name>
+      <url>http://opensource.org/licenses/BSD-3-Clause</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Walter Tetzner</name>
+      <email>walter@waltertetzner.net</email>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git@github.com:wtetzner/kurgan.git</connection>
+    <developerConnection>scm:git:git@github.com:wtetzner/kurgan.git</developerConnection>
+    <url>git@github.com:wtetzner/kurgan.git</url>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
@@ -41,6 +75,17 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.2</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>2.3</version>
@@ -62,6 +107,20 @@
             <id>attach-javadocs</id>
             <goals>
               <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
             </goals>
           </execution>
         </executions>
