--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.bovinegenius</groupId>
   <artifactId>kurgan</artifactId>
-  <version>0.6.0</version>
+  <version>0.7.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>kurgan</name>
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>1.13</version>
+      <version>1.26</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
